--- a/JavaScript30-master/02 - JS and CSS Clock/index.html
+++ b/JavaScript30-master/02 - JS and CSS Clock/index.html
@@ -6,7 +6,7 @@
   <title>JS + CSS Clock</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="main.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
   <div class="clock">
@@ -16,5 +16,7 @@
       <div class="hand second-hand"></div>
     </div>
   </div>
+
+  
 </body>
 </html>
