--- a/JavaScript30-master/03 - CSS Variables/index.html
+++ b/JavaScript30-master/03 - CSS Variables/index.html
@@ -6,7 +6,7 @@
   <title>Scoped CSS Variables and JS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="main.js"></script>
+  <!-- <script src="main.js"></script> -->
 </head>
 <body>
     <h2>Update CSS Variables with <span class="hl">JS</span></h2>
@@ -23,5 +23,7 @@
     </div>
 
     <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500" alt="Girl walking on mountain trail.">
-</body>
+
+    <script src="main.js"></script>
+  </body>
 </html>
